--- a/mainform.lfm
+++ b/mainform.lfm
@@ -1,38 +1,37 @@
 object Form1: TForm1
-  Left = 265
-  Height = 508
-  Top = 146
-  Width = 589
+  Left = 254
+  Height = 668
+  Top = 53
+  Width = 981
   Caption = 'Hermite'
-  ClientHeight = 508
-  ClientWidth = 589
+  ClientHeight = 668
+  ClientWidth = 981
   Color = clBtnFace
   Font.Color = clWindowText
   Font.Height = -11
   Font.Name = 'MS Sans Serif'
-  OnActivate = FormActivate
   OnShow = FormShow
   LCLVersion = '1.2.6.0'
   object Label1: TLabel
     Left = 24
     Height = 13
-    Top = 64
-    Width = 141
-    Caption = 'Stopień wielomianu (<20):'
+    Top = 72
+    Width = 194
+    Caption = 'Maksymalny stopień wielomianu (n):'
     ParentColor = False
   end
   object Label2: TLabel
-    Left = 176
+    Left = 24
     Height = 13
-    Top = 64
-    Width = 177
-    Caption = 'Liczba więzów interpolacji (<20):'
+    Top = 104
+    Width = 181
+    Caption = 'Liczba więzów interpolacji - 1 (k):'
     ParentColor = False
   end
   object Label3: TLabel
     Left = 24
     Height = 13
-    Top = 472
+    Top = 632
     Width = 51
     Anchors = [akLeft, akBottom]
     Caption = 'Punkt xx:'
@@ -40,85 +39,47 @@ object Form1: TForm1
   end
   object StringGrid1: TStringGrid
     Left = 24
-    Height = 320
-    Top = 144
-    Width = 145
+    Height = 392
+    Top = 232
+    Width = 302
     Anchors = [akTop, akLeft, akBottom]
-    ColCount = 2
+    ColCount = 3
     FixedCols = 0
     Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRangeSelect, goEditing]
-    RowCount = 2
+    RowCount = 21
     TabOrder = 0
     TitleFont.Color = clWindowText
     TitleFont.Height = -11
     TitleFont.Name = 'MS Sans Serif'
     OnKeyPress = Edit1KeyPress
   end
-  object StringGrid2: TStringGrid
-    Left = 176
-    Height = 320
-    Top = 144
-    Width = 150
-    Anchors = [akTop, akLeft, akBottom]
-    ColCount = 1
-    FixedCols = 0
-    Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRangeSelect, goEditing]
-    RowCount = 2
-    TabOrder = 1
-    TitleFont.Color = clWindowText
-    TitleFont.Height = -11
-    TitleFont.Name = 'MS Sans Serif'
-    OnKeyPress = Edit1KeyPress
-  end
-  object TrackBar1: TTrackBar
-    Left = 24
-    Height = 45
-    Top = 84
-    Width = 150
-    Max = 20
-    Min = 1
-    OnChange = TrackBar1Change
-    Position = 1
-    TabOrder = 2
-  end
-  object TrackBar2: TTrackBar
-    Left = 176
-    Height = 45
-    Top = 84
-    Width = 150
-    Max = 20
-    Min = 1
-    OnChange = TrackBar2Change
-    Position = 1
-    TabOrder = 3
-  end
   object Button1: TButton
     Left = 245
     Height = 25
-    Top = 471
+    Top = 631
     Width = 81
     Anchors = [akLeft, akBottom]
     Caption = 'Wylicz'
     OnClick = Button1Click
-    TabOrder = 4
+    TabOrder = 1
   end
   object Edit1: TEdit
     Left = 80
     Height = 22
-    Top = 471
-    Width = 144
+    Top = 631
+    Width = 64
     Anchors = [akLeft, akBottom]
     OnKeyPress = Edit1KeyPress
-    TabOrder = 5
+    TabOrder = 2
   end
   object Memo1: TMemo
     Left = 344
-    Height = 488
+    Height = 648
     Top = 8
-    Width = 232
+    Width = 624
     Anchors = [akTop, akLeft, akRight, akBottom]
     ReadOnly = True
-    TabOrder = 6
+    TabOrder = 3
   end
   object RadioGroup1: TRadioGroup
     Left = 14
@@ -142,6 +103,80 @@ object Form1: TForm1
       'zwykła'
       'przedziałowa'
     )
+    OnSelectionChanged = RadioGroup1SelectionChanged
+    TabOrder = 4
+  end
+  object kSpin: TSpinEdit
+    Left = 276
+    Height = 16
+    Top = 96
+    Width = 50
+    Enabled = False
+    MaxValue = 20
+    TabOrder = 5
+    Value = 5
+  end
+  object nSpin: TSpinEdit
+    Left = 276
+    Height = 16
+    Top = 64
+    Width = 50
+    Enabled = False
+    MaxValue = 20
+    TabOrder = 6
+    Value = 5
+  end
+  object RadioGroup2: TRadioGroup
+    Left = 23
+    Height = 86
+    Top = 130
+    Width = 303
+    AutoFill = True
+    Caption = 'Dane'
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousChildResize
+    ChildSizing.ShrinkHorizontal = crsScaleChilds
+    ChildSizing.ShrinkVertical = crsScaleChilds
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 1
+    ClientHeight = 63
+    ClientWidth = 295
+    ItemIndex = 1
+    Items.Strings = (
+      'Własne'
+      'Przykładowe'
+    )
+    OnSelectionChanged = RadioGroup2SelectionChanged
     TabOrder = 7
+    object ComboBox1: TComboBox
+      Left = 6
+      Height = 19
+      Top = 44
+      Width = 283
+      ItemHeight = 0
+      ItemIndex = 0
+      Items.Strings = (
+        'Przykład A (n = 5, k = 5, xx = 2.5)'
+        'Przykład B (n = 6, k = 3, xx = 2.5)'
+        'Przykład C (n = 9, k = 4, xx = 0.5)'
+        'Przykład D (n = 0, k = 0, xx = 0.5)'
+        'Przykład E (n = 4, k = 2, xx = 1.5)'
+      )
+      OnChange = ComboBox1Change
+      Style = csDropDownList
+      TabOrder = 0
+      Text = 'Przykład A (n = 5, k = 5, xx = 2.5)'
+    end
+  end
+  object Edit2: TEdit
+    Left = 152
+    Height = 22
+    Top = 630
+    Width = 64
+    Anchors = [akLeft, akBottom]
+    Enabled = False
+    OnKeyPress = Edit1KeyPress
+    TabOrder = 8
   end
 end
